--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<h1>Hello World or something like that</h1>
+<!DOCTYPE html>
+<html>
+    <header>
+        
+    </header>
+    <body>
+        <h1>Hello World or something like that</h1>
+        <div id="testReact"></div>
+        <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
+        <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
+        <script src="like_button.js"></script>
+    </body>
+</html>
+
